# disk-cloner

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: backup.rs  clone.rs  lsblk.rs  main.rs  manifest.rs  restore.rs  util.rs
