[package]
name = "disk-cloner"
version = "0.1.0"
edition = "2021"
description = "CLI tool to image an SSD/disk using partclone"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = 3
